# RAGBot

./: .env.example  .gitignore  Makefile  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
data/eval/: golden.jsonl
docs/: architecture.md
scripts/: build_lecture_meta.py  dev.ts
src/ragbot/: clock.py  config.py
src/ragbot/api/: app.py
src/ragbot/eval/: generate.py  golden.py  recall.py  run.py
src/ragbot/ingest/: chunk.py  classify.py  dedup.py  extract.py  models.py  run.py
src/ragbot/retrieve/: build_index.py  embedder.py  index.py
src/ragbot/summaries/: concepts.py  lecture_meta.py  models.py  parse.py
src/ragbot/tutor/: citations.py  concept_store.py  enrich.py  followup.py  llm.py  prompts.py  references.py  schemas.py  segment.py  service.py
tests/: test_chunk.py  test_citations.py  test_classify.py  test_clock.py  test_concepts.py  test_dedup.py  test_eval_recall.py  test_extract.py  test_retrieve.py  test_summaries.py  test_tutor.py
web/: package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/inspector/: page.tsx
web/src/components/: AnswerMarkdown.tsx  AnswerPanel.tsx  AnswerSegments.tsx  AnswerSkeleton.tsx  References.tsx  StagedProgress.tsx  Tooltip.tsx  UseCaseNotice.tsx  ui.tsx
web/src/components/inspector/: CorpusExplainer.tsx  InspectorCanvas.tsx  InspectorModal.tsx
web/src/lib/: api.ts  citation-link.ts  trace-graph.ts  types.ts
