[project]
name = "ragbot"
version = "0.1.0"
description = "A grounded course tutor with anti-cheat guardrails over lecture transcripts and course materials"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0.1",
    "beautifulsoup4>=4.12",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
